--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,15 @@
     background-color: #676767;
 }
 
-/*nav colors*/
+.bg-color-three-reasons{
+    background-color: #fff;
+    
+}
 
 .ui-menu-color-home {
     background-color: #e67e22;
 }
+
 
 .ui-menu-color-resume {
     background-color: #9b59b6;
@@ -26,21 +30,42 @@
 
 /*--------------------------------------------Special paddings/margins/texts*/
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
-.uppercase{
+
+.uppercase {
     text-transform: uppercase;
 }
 
-.general-sub{
+.general-sub {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
 
-.inline-block{
+.inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 /*--------------------------------------------Headings*/
