--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,9 @@
     background-color: #676767;
 }
 
-.bg-color-three-reasons {
+.bg-color-three-reasons{
     background-color: #fff;
-
+    
 }
 
 .bg-color-personal-info {
@@ -96,7 +96,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    min-height: 360px;
+    min-height:  360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -123,26 +123,26 @@ header {
     margin-right: 0;
 }
 
-.menucontainer {
+.menucontainer{
     font-size: 0;
 }
 
-#nav {
+#nav{
     margin: 0;
 }
 
-#nav li {
+#nav li{
     font-size: 14px;
-    padding: 0;
+    padding:0;
 }
 
-.menuitem {
+.menuitem{
     height: 120px;
     text-align: center;
     padding: 0;
 }
 
-.menuitem a {
+.menuitem a{
     width: 100%;
     text-decoration: none;
     color: #fff;
@@ -169,13 +169,13 @@ header {
 
 
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color:rgba(0,0,0,0.2);
     height: 120px;
 }
 
 /*--------------------------------------------Footer*/
 
-footer {
+footer{
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
@@ -192,11 +192,11 @@ footer {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.cv-pdf i:hover {
+.cv-pdf i:hover{
     color: #e84610;
 }
 
-.social-links {
+.social-links{
     padding-bottom: 15px;
 }
 
@@ -216,7 +216,7 @@ footer {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover {
+.social-links li a i:hover{
     background: #e84610;
 }
 
@@ -237,7 +237,7 @@ footer {
 
 /* ----------------------------------------Three Reasons */
 
-.personal-info-item {
+.personal-info-item{
     margin-bottom: 20px;
     display: block;
     clear: both;
@@ -254,7 +254,7 @@ footer {
     margin: 0;
 }
 
-.personal-info-item .key {
+.personal-info-item .key  {
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -282,13 +282,13 @@ footer {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 3px 30px 2px 10px;
+    padding: 3px 30px 2px 10px; 
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2)
 }
 
 .progress-section {
-    margin: 40px 20px;
+    margin:40px 20px;
 }
 
 /*--------------------------------------------Work History*/
@@ -354,7 +354,7 @@ footer {
     max-width: 70%;
 }
 
-button[type="submit"] {
+button[type="submit"]{
     margin-top: 15px;
     margin-bottom: 20px;
     color: #fafafa;
@@ -363,11 +363,11 @@ button[type="submit"] {
 
 /*--------------------------------------------Media Queiries that I love*/
 
-@media(min-width: 992px) {
+@media(min-width: 992px){
     .center-form {
-        padding-top: 30px;
-        min-height: 240px;
-        margin: 0 auto;
-        max-width: 50%;
-    }
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}
 }
