--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,16 @@
     background-color: #676767;
 }
 
-.bg-color-three-reasons{
-    background-color: #fff;
-    
+.bg-color-three-reasons {
+    background-color: #ffffff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
 .bg-color-work-history {
@@ -20,13 +23,20 @@
 }
 
 .bg-color-contact {
-    background-color: #fff;
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
     background-color: #e67e22;
 }
-
 
 .ui-menu-color-resume {
     background-color: #9b59b6;
@@ -37,10 +47,30 @@
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
+    background-color: #d9a81d;
 }
 
-/*--------------------------------------------Special paddings/margins/texts*/
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
 
 h1,
 h2,
@@ -63,14 +93,9 @@ h4 {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
-}
-
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
 }
 
 .history-heading,
@@ -81,7 +106,8 @@ h4 {
     margin-bottom: 40px;
 }
 
-/*--------------------------------------------Headings*/
+
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -92,11 +118,11 @@ header {
 }
 
 .logo {
-    background: url("../images/elias.jpg");
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
-    min-height:  360px;
+    background-size: cover;
+    min-height: 360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -107,7 +133,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .title {
@@ -116,41 +142,33 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #fff;
+    color: #ffffff;
 }
 
-.list-inline-item:not(:last-child) {
-    margin-right: 0;
-}
-
-.menucontainer{
-    font-size: 0;
-}
-
-#nav{
+#nav {
     margin: 0;
 }
 
-#nav li{
-    font-size: 14px;
-    padding:0;
+#nav li {
+    padding: 0;
 }
 
-.menuitem{
+.menuitem {
     height: 120px;
     text-align: center;
     padding: 0;
 }
 
-.menuitem a{
+.menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
     height: 120px;
 }
 
+
 .menuitem a i {
-    padding-top: 30px;
+    padding-top: 22px;
     display: block;
     color: #fafafa;
     font-size: 26px;
@@ -168,35 +186,39 @@ header {
 }
 
 
+/*--------------------------------------------Hover.css*/
+
 .hvr-sweep-to-bottom:before {
-    background-color:rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
+
 /*--------------------------------------------Footer*/
 
-footer{
+footer {
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
+    margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.cv-pdf i:hover{
-    color: #e84610;
-}
-
-.social-links{
+.social-links {
     padding-bottom: 15px;
 }
 
@@ -216,15 +238,15 @@ footer{
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover{
+.social-links li a i:hover {
     background: #e84610;
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/* ----------------------------------------Three Reasons */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -235,9 +257,9 @@ footer{
     margin-bottom: 15px;
 }
 
-/* ----------------------------------------Three Reasons */
+/*--------------------------------------------Personal Info*/
 
-.personal-info-item{
+.personal-info-item {
     margin-bottom: 20px;
     display: block;
     clear: both;
@@ -246,7 +268,6 @@ footer{
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -254,7 +275,8 @@ footer{
     margin: 0;
 }
 
-.personal-info-item .key  {
+.personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -266,37 +288,34 @@ footer{
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
-    width: 60%
+    width: 60%;
 }
 
-/* ----------------------------------------Skills */
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 3px 30px 2px 10px; 
+    padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25, 25, 25, 0.2)
+    background-color: rgba(25, 25, 25, 0.2);
 }
+
 
 .progress-section {
-    margin:40px 20px;
+    margin: 40px 20px;
 }
+
 
 /*--------------------------------------------Work History*/
-
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-}
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -310,7 +329,7 @@ footer{
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -318,12 +337,12 @@ footer{
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -335,11 +354,16 @@ footer{
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
 
-/*--------------------------------------------Contact form*/
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -348,26 +372,39 @@ footer{
     margin-bottom: 20px;
 }
 
+
 .center-form {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
 }
 
-button[type="submit"]{
+button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
-/*--------------------------------------------Media Queiries that I love*/
+/*--------------------------------------------Map*/
 
-@media(min-width: 992px){
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
-    padding-top: 30px;
-    min-height: 240px;
-    margin: 0 auto;
-    max-width: 50%;
-}
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
