--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,16 +6,13 @@
     background-color: #676767;
 }
 
-.bg-color-three-reasons {
-    background-color: #ffffff;
+.bg-color-three-reasons{
+    background-color: #fff;
+    
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
-}
-
-.bg-color-skills {
-    background-color: #ffffff;
 }
 
 .bg-color-work-history {
@@ -23,20 +20,13 @@
 }
 
 .bg-color-contact {
-    background-color: #ffffff;
-}
-
-.bg-color-conferences {
-    background-color: #f4f4f4;
-}
-
-.bg-color-groups {
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 .ui-menu-color-home {
     background-color: #e67e22;
 }
+
 
 .ui-menu-color-resume {
     background-color: #9b59b6;
@@ -47,9 +37,8 @@
 }
 
 .ui-menu-color-download {
-    background-color: #d9a81d;
+    background-color: #525252;
 }
-
 
 .ui-menu-color-github {
     background-color: #1c4a6c;
@@ -59,18 +48,7 @@
     background-color: #e74c3c;
 }
 
-
-
-
-body {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
-    background-color: #525252;
-    color: #555555;
-}
-
-
-/*--------------------------------------------Special Paddings/Margins/Text*/
+/*--------------------------------------------Special paddings/margins/texts*/
 
 h1,
 h2,
@@ -93,9 +71,14 @@ h4 {
     display: inline-block;
 }
 
-
 .row-table {
     display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
 }
 
 .history-heading,
@@ -106,8 +89,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-
-/*--------------------------------------------Heading*/
+/*--------------------------------------------Headings*/
 
 header {
     margin: 0;
@@ -118,11 +100,11 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpg");
+    background: url("../images/elias.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 360px;
+    background-size: contain;
+    min-height:  360px;
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
@@ -133,7 +115,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #ffffff;
+    color: #fff;
 }
 
 .title {
@@ -142,33 +124,41 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #ffffff;
+    color: #fff;
 }
 
-#nav {
+.list-inline-item:not(:last-child) {
+    margin-right: 0;
+}
+
+.menucontainer{
+    font-size: 0;
+}
+
+#nav{
     margin: 0;
 }
 
-#nav li {
-    padding: 0;
+#nav li{
+    font-size: 14px;
+    padding:0;
 }
 
-.menuitem {
+.menuitem{
     height: 120px;
     text-align: center;
     padding: 0;
 }
 
-.menuitem a {
+.menuitem a{
     width: 100%;
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
     height: 120px;
 }
 
-
 .menuitem a i {
-    padding-top: 22px;
+    padding-top: 30px;
     display: block;
     color: #fafafa;
     font-size: 26px;
@@ -186,39 +176,35 @@ header {
 }
 
 
-/*--------------------------------------------Hover.css*/
-
 .hvr-sweep-to-bottom:before {
-    background: rgba(0, 0, 0, 0.2);
+    background-color:rgba(0,0,0,0.2);
     height: 120px;
 }
 
-
 /*--------------------------------------------Footer*/
 
-footer {
+footer{
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
-    margin: 0;
 }
 
-footer .cv-pdf i {
+.cv-pdf i {
+    font-size: 18px;
     color: #fafafa;
     text-align: center;
-    font-size: 18px;
     padding-left: 5px;
-}
-
-footer .cv-pdf i:hover {
-    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links {
+.cv-pdf i:hover{
+    color: #e84610;
+}
+
+.social-links{
     padding-bottom: 15px;
 }
 
@@ -238,15 +224,15 @@ footer .cv-pdf i:hover {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover {
+.social-links li a i:hover{
     background: #e84610;
 }
 
 #footer-details {
-    margin: 20px;
+    padding: 20px;
 }
 
-/*--------------------------------------------Three Reasons*/
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -257,9 +243,9 @@ footer .cv-pdf i:hover {
     margin-bottom: 15px;
 }
 
-/*--------------------------------------------Personal Info*/
+/* ----------------------------------------Three Reasons */
 
-.personal-info-item {
+.personal-info-item{
     margin-bottom: 20px;
     display: block;
     clear: both;
@@ -268,6 +254,7 @@ footer .cv-pdf i:hover {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
+    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -275,8 +262,7 @@ footer .cv-pdf i:hover {
     margin: 0;
 }
 
-.personal-info-item .key {
-    display: inline-block;
+.personal-info-item .key  {
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -288,34 +274,37 @@ footer .cv-pdf i:hover {
 }
 
 .personal-info-item .value {
-    display: inline-block;
     position: relative;
-    width: 60%;
+    width: 60%
 }
 
-/*--------------------------------------------Skills*/
+/* ----------------------------------------Skills */
 
 .progress {
     position: relative;
     height: 25px;
+    margin-bottom: 4px;
 }
 
 .progress-type {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding: 3px 30px 2px 10px;
+    padding: 3px 30px 2px 10px; 
     color: #fafafa;
-    background-color: rgba(25, 25, 25, 0.2);
+    background-color: rgba(25, 25, 25, 0.2)
 }
-
 
 .progress-section {
-    margin: 40px 20px;
+    margin:40px 20px;
 }
 
-
 /*--------------------------------------------Work History*/
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -329,7 +318,7 @@ footer .cv-pdf i:hover {
     margin: 0;
 }
 
-.timeline-item::before {
+.timeline-item:before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -337,12 +326,12 @@ footer .cv-pdf i:hover {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: .8em;
+    font-size: 0.8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item::after {
+.timeline-item:after {
     width: 12px;
     height: 12px;
     display: block;
@@ -354,16 +343,11 @@ footer .cv-pdf i:hover {
     background: #fafafa;
 }
 
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-}
-
 .history-items {
     margin-bottom: 30px;
 }
 
-/*--------------------------------------------Contact*/
+/*--------------------------------------------Contact form*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -372,39 +356,26 @@ footer .cv-pdf i:hover {
     margin-bottom: 20px;
 }
 
-
 .center-form {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
 }
 
-button[type="submit"] {
+button[type="submit"]{
     margin-top: 15px;
     margin-bottom: 20px;
-    background-color: #e84610;
     color: #fafafa;
+    background-color: #e84610;
 }
 
-/*--------------------------------------------Map*/
+/*--------------------------------------------Media Queiries that I love*/
 
-div#map {
-    min-height: 360px;
-}
-
-/*--------------------------------------------Media Queries*/
-
-@media(min-width: 992px) {
-    .section-column {
-        padding: 0 30px 30px;
-        float: none;
-        display: table-cell;
-    }
-
+@media(min-width: 992px){
     .center-form {
-        padding-top: 30px;
-        min-height: 240px;
-        margin: 0 auto;
-        max-width: 50%;
-    }
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}
 }
