added maps api and js code in the interests.html. Also added a small CSS proprety to the #map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,12 @@ header {
     height: 120px;
 }
 
+/*--------------------------------------------Map*/
+
+div#map {
+    min-height: 360px;
+}
+
 /*--------------------------------------------Footer*/
 
 footer{
